[project]
name = "linux-kernel-mcp"
version = "0.1.1"
description = "MCP server for querying Linux kernel docs, code, and APIs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "jvle" },
]
license = { file = "LICENSE" }
keywords = ["mcp", "linux", "kernel", "docs", "source-code", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.27,<2",
]

[dependency-groups]
docs = [
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
linux-kernel-mcp = "linux_kernel_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/jvlegod/linux-kernel-mcp"
Repository = "https://github.com/jvlegod/linux-kernel-mcp"
Issues = "https://github.com/jvlegod/linux-kernel-mcp/issues"
